plugins {
    id 'java'
    id 'maven-publish'
    id 'distribution'
}

//DEPENDENCY MANAGEMENT--
repositories {
    jcenter()
    flatDir{
        dirs ("lib")
    }
}

dependencies {
    implementation "org.junit.jupiter:junit-jupiter:5.4.2"
    implementation name:"commons-collections-2.1"
    implementation name: "commons-lang-2.5"
    implementation name: "hec"
    implementation name: "hecnf"
    implementation name: "hecnfPlugin"
    implementation name: "jdom-1.0"
    implementation name: "rma"
    implementation name: "rmadev"
    implementation name: "wat"
    implementation name: "watModel"
}

//TESTING--
test{
    useJUnitPlatform()
    testLogging{
        test {
            testLogging {
                events "PASSED","FAILED", "SKIPPED"
            }
        }
    }
}
tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs "--enable-preview"
}

//PUBLISHING--
group = "mil.army.usace.hec"
version "1.0"

distributions {
    main {
        distributionBaseName = 'ConfidenceBuilderPlugin'
        contents {
            from 'src/WATPluginMarketplaceConfig'
            from 'build/libs'
        }
    }
}

jar {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    manifest {
        attributes "WatPluginMainClass": "ConfidenceBuilderPlugin"
    }
}

publishing {
    publications {
        ConfidenceBuilderArtifact(MavenPublication) {
            artifactId = "ConfidenceBuilderPlugin"
            from components.java

        }
    }

    repositories {
        maven {
            credentials {
                username = "$mavenUser"
                password = "$mavenPassword"
            }
/*            This code publishes to release or snapshot based on version name. I've commented it out because
               I need the Jar to have a stable name (snapshot adds the date to the name of the file) for testing
               in the WAT, but I don't want to put a broken plugin in the release maven repo.
            def releasesRepoUrl = "https://www.hec.usace.army.mil/nexus/repository/maven-releases/"
            def snapshotsRepoUrl = "https://www.hec.usace.army.mil/nexus/repository/maven-snapshots/"
            url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl*/
            // the code below just throws it in the snapshot repo regardless of version.
            url = "https://www.hec.usace.army.mil/nexus/repository/maven-snapshots/"
        }
    }
}
publish.dependsOn jar
